--- a/web-development/css/dashboard-style.css
+++ b/web-development/css/dashboard-style.css
@@ -2,11 +2,6 @@
     margin: 0;
 }
 
-body {
-    background-image: url('images/cleancode.png');
-    background-size: 800px 600px;
-}
-
 header {
     background-color: blueviolet;
     padding: 10px;
@@ -25,12 +20,60 @@ nav a {
     text-decoration: none;
     color: white;
     padding: 5px;
+    border: 1px black solid;
 }
 
 nav a:hover {
-    background-color: green;
+    border: 1px white solid;
+    border-radius: 5px;
 }
 
 h1.type-1 {
     color: red;
+}
+
+.card-container-1{
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.card-1 {
+    border: 1px solid black;
+    width: 200px;
+    height: 100px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.card-1-title {
+    font-size: 10pt;
+    padding: 10px;
+}
+
+.card-1-content {
+    text-align: center;
+    font-size: 18pt;
+}
+
+.card-container-chart{
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.card-chart {
+    border: 1px solid black;
+    width: 400px;
+    height: 200px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.card-chart-title {
+    font-size: 10pt;
+    padding: 10px;
+}
+
+.card-chart-content {
+    text-align: center;
+    font-size: 18pt;
 }
