--- a/web-development/css/dashboard-style.css
+++ b/web-development/css/dashboard-style.css
@@ -46,13 +46,13 @@ h1.type-1 {
 }
 
 .card-1-title {
-    font-size: 10pt;
-    padding: 10px;
+    font-size: 1vw;
+    padding: 1px;
 }
 
 .card-1-content {
     text-align: center;
-    font-size: 18pt;
+    font-size: 1.8vw;
 }
 
 .card-container-chart{
@@ -76,4 +76,10 @@ h1.type-1 {
 .card-chart-content {
     text-align: center;
     font-size: 18pt;
+}
+
+@media screen and (max-width: 800px) {
+    .card-container-1 .card-container-chart {
+        display: none;
+    }
 }
